--- a/views/campaign/edit.html
+++ b/views/campaign/edit.html
@@ -6,10 +6,13 @@
 
 	<ul class="unstyled menu">
 	<li>
-	<a href="/campaigns/edit/<%=campaign.id%>" class="btn">Edit this Campaign</a>
+		<a href="/campaigns/audit/<%= campaign.id%>/true">Audit Campaign</a>
 	</li>
 	<li>
-	<a href="/campaigns/edit/<%=campaign.id%>" class="btn delete">Delete this Campaign</a>
+	<a href="/campaigns/edit/<%=campaign.id%>" class="btn">Edit Campaign</a>
+	</li>
+	<li>
+	<a href="/campaigns/edit/<%=campaign.id%>" class="btn delete">Delete Campaign</a>
 	</li>
 	</ul>
 </div>
