--- a/views/bonus/edit.html
+++ b/views/bonus/edit.html
@@ -34,7 +34,21 @@
 			<label for="title">Title</label>
 			<div class="input"><input type="text" name="title" id="title" value="<%=bonus.title%>" /></div>
 			</div>
+			
+			<div class="clearfix">
+			<label for="description">Description</label>
+			<div class="input">
+			<textarea name="description" id="description" rows=10 cols=50><%=bonus.description%></textarea>
+			</div>
+			</div>
 
+		<!-- display tabs -->
+		<ul id="bonustabs" class="tabs">
+			<li class="active"><a href="#item">Item Bonus</a></li>
+			<li><a href="#spot">Spot Bonus</a></li>
+		</ul>
+		
+		<div id="item" class="tabview">
 			<div class="clearfix">
 			<label for="start">Start</label>
 			<div class="input">
@@ -66,14 +80,77 @@
 			<%}%>
 			</div>
 			</div>
+		</div>	
+			
+		<div id="spot" class="tabview" style="display:none;">
+			<p>First team(s) to submit X items.</p>
 			
 			<div class="clearfix">
-			<label for="description">Description</label>
-			<div class="input">
-			<textarea name="description" id="description" rows=10 cols=50><%=bonus.description%></textarea>
-			</div>
+				<label for="numteams">Number of Teams</label>
+				<div class="input">
+					<select id="numteams">
+					  <option value="1" <%= ('1' == bonus.numteams)?"seleted='selected'":""%>>1</option>
+					  <option value="2" <%= ('2' == bonus.numteams)?"seleted='selected'":""%>>2</option>
+					  <option value="3" <%= ('3' == bonus.numteams)?"seleted='selected'":""%>>3</option>
+					  <option value="4" <%= ('4' == bonus.numteams)?"seleted='selected'":""%>>4</option>
+					  <option value="5" <%= ('5' == bonus.numteams)?"seleted='selected'":""%>>5</option>
+					  <option value="6" <%= ('6' == bonus.numteams)?"seleted='selected'":""%>>6</option>
+					  <option value="7" <%= ('7' == bonus.numteams)?"seleted='selected'":""%>>7</option>
+					  <option value="8" <%= ('8' == bonus.numteams)?"seleted='selected'":""%>>8</option>
+					  <option value="9" <%= ('9' == bonus.numteams)?"seleted='selected'":""%>>9</option>
+					</select>
+				</div>
 			</div>
 			
+			<div class="clearfix">
+				<label for="total">How Many?</label>
+				<div class="input"><input type="text" name="total" id="total" value="<%=bonus.total%>" /></div>
+			</div>
+		
+			<div class="clearfix">
+				<label for="pointsoritems">Points or Items?</label>
+				<div class="input">
+					<select id="pointsoritems">
+					  <option value="items"  <%= ('items' == bonus.pointsoritems)?"seleted='selected'":""%>>Items</option>
+					  <option value="points" <%= ('points' == bonus.pointsoritems)?"seleted='selected'":""%>>Points</option>
+					</select>
+				</div>
+			</div>
+			
+			<div class="clearfix">
+				<label for="spottype">Of Item</label>
+				<div class="input">
+					<ul class="inputs-list">
+					<li><label>
+					<input type="radio" name="spottype" value="0"  <%=(!bonus.spottype)?"checked":""%>>
+					<span>All Items</span>
+					</label></li>
+				<% for(var i=0; i < itemTypes.length; i++) {%>
+					<%if (itemTypes[i].visible) {%>
+					<li><label>
+					<input type="radio" name="spottype" value="<%=itemTypes[i].id%>" <%= (itemTypes[i].id == bonus.spottype)?"checked":""%>>
+					<span><%=itemTypes[i].name%></span>
+					</label></li>
+					<%}%>
+				<%}%>
+					</ul>
+				</div>
+			</div>
+			
+			<p>Leave blank for no start/end date.</p>
+			
+			<div class="clearfix">
+				<label for="spotstart">Start</label>
+				<div class="input"><input type="text" name="spotstart" id="spotstart" value="<%=bonus.spotstart%>" /></div>
+			</div>
+			
+			<div class="clearfix">
+				<label for="spotend">End</label><br />
+				<div class="input"><input type="text" name="spotend" id="spotend" value="<%=bonus.spotend%>" /></div>
+			</div>
+		</div>
+		
+			<input type="hidden" name="bonusType" id="bonusType" value="<%=bonus.bonustype%>" />
 			
 			<input type="hidden" name="guid" id="guid" value="<%=bonus._id%>" />
 			<input type="hidden" name="campaignId" id="campaignId" value="<%=bonus.campaignId%>" />
@@ -92,8 +169,41 @@
 </div>
 
 <script>
-	$('#start').datetimepicker();
-	$('#end').datetimepicker();
-	$('#start').datetimepicker('setDate', (new Date("<%=bonus.start%>")) );
-	$('#end').datetimepicker('setDate', (new Date("<%=bonus.end%>")) );
+	
+	$(document).ready(function() {
+		$('#start').datetimepicker();
+		$('#end').datetimepicker();
+		
+		<%if (bonus.start) {%>
+		$('#start').datetimepicker('setDate', (new Date("<%=bonus.start%>")) );
+		$('#end').datetimepicker('setDate', (new Date("<%=bonus.end%>")) );
+		<%}%>
+		
+		$('#spotstart').datetimepicker();
+		$('#spotend').datetimepicker();
+		
+		<%if (bonus.spotstart) {%>
+		$('#spotstart').datetimepicker('setDate', (new Date("<%=bonus.spotstart%>")) );
+		$('#spotend').datetimepicker('setDate', (new Date("<%=bonus.spotend%>")) );
+		<%}%>
+	
+		// add tab logic
+		$("#bonustabs a").click(function (){
+			// set active tab
+			$("#bonustabs li").removeClass("active");
+			$(this).parent().addClass("active");
+			
+			// hide all current tab views
+			$(".tabview").hide();
+			
+			// show the proper tab view
+			$($(this).attr('href')).show();
+			
+			// set hidden input
+			$("#bonusType").val($(this).attr('href').replace("#", ""));
+			
+			// disable redirect
+			return false;
+		});
+	});
 </script>
