updated spot start/end/type to match regular bonus

--- a/views/bonus/show.html
+++ b/views/bonus/show.html
@@ -39,8 +39,8 @@
 		<%}%>
 		</p>
 	
-		<%if (bonus.spotstart) {%>
-			<p>From <%=bonus.spotstart%> to <%=bonus.spotend%></p>
+		<%if (bonus.start) {%>
+			<p>From <%=bonus.start%> to <%=bonus.end%></p>
 		<%}%>
 	<%} else { %>
 		<p>From <%=bonus.start%> to <%=bonus.end%></p>
