--- a/views/bonus/edit.html
+++ b/views/bonus/edit.html
@@ -122,13 +122,13 @@
 				<div class="input">
 					<ul class="inputs-list">
 					<li><label>
-					<input type="radio" name="spottype" value="0"  <%=(!bonus.spottype)?"checked":""%>>
+					<input type="radio" name="spottype" value="0"  <%=(!bonus.type)?"checked":""%>>
 					<span>All Items</span>
 					</label></li>
 				<% for(var i=0; i < itemTypes.length; i++) {%>
 					<%if (itemTypes[i].visible) {%>
 					<li><label>
-					<input type="radio" name="spottype" value="<%=itemTypes[i].id%>" <%= (itemTypes[i].id == bonus.spottype)?"checked":""%>>
+					<input type="radio" name="spottype" value="<%=itemTypes[i].id%>" <%= (itemTypes[i].id == bonus.type)?"checked":""%>>
 					<span><%=itemTypes[i].name%></span>
 					</label></li>
 					<%}%>
@@ -146,12 +146,12 @@
 			
 			<div class="clearfix">
 				<label for="spotstart">Start</label>
-				<div class="input"><input type="text" name="spotstart" id="spotstart" value="<%=bonus.spotstart%>" /></div>
+				<div class="input"><input type="text" name="spotstart" id="spotstart" value="<%=bonus.start%>" /></div>
 			</div>
 			
 			<div class="clearfix">
 				<label for="spotend">End</label><br />
-				<div class="input"><input type="text" name="spotend" id="spotend" value="<%=bonus.spotend%>" /></div>
+				<div class="input"><input type="text" name="spotend" id="spotend" value="<%=bonus.end%>" /></div>
 			</div>
 		</div>
 		
