--- a/views/team/show.html
+++ b/views/team/show.html
@@ -55,6 +55,8 @@
 
 		<div class="entry">
 			<div class="points"><%= points%> points</div>
+			<div class="bonusPoints"><%= bonusPoints%> bonus points</div>
+			<div class="quantity"><%= quantity%> items</div>
 			<div class="info">
 				<div class="motto"><%= team.motto%></div>
 				<%if (teamCaptain.login) {%>
