updated per item adds to recalculate spot bonuses. item adds now automatically update spot bonuses. closes #16

--- a/views/bonus/add.html
+++ b/views/bonus/add.html
@@ -159,7 +159,7 @@
 		$('#start').datetimepicker();
 		$('#end').datetimepicker();
 		
-		$('#sportstart').datetimepicker();
+		$('#spotstart').datetimepicker();
 		$('#spotend').datetimepicker();
 	
 		// add tab logic
