--- a/views/bonus/show.html
+++ b/views/bonus/show.html
@@ -40,9 +40,10 @@
 	
 	<%if (bonus.completed) {%>
 	<p>This bonus has been completed.</p>
+	<%}%>
 	
 	<%if (teams) {%>
-		<p>The following teams won:</p>
+		<p>The following teams won this bonus:</p>
 		
 		<table class="common-table zebra-striped sortable" id="teams">
 			<thead>
@@ -57,8 +58,7 @@
 			</tbody>
 		</table>
 	<%}%>
-	<%}%>
-	
+
 	<%if ('spot' == bonus.bonustype) {%>
 		<p>
 		The first <%=bonus.numteams%> teams to reach <%=bonus.total%> <%=(bonus.pointsoritems == 'items')?'items':'points'%>
@@ -68,10 +68,12 @@
 		</p>
 	
 		<%if (bonus.start) {%>
-			<p>From <%=bonus.start%> to <%=bonus.end%></p>
+			<p>From <%=bonus.start%> <%if (bonus.end) {%>to <%=bonus.end%><%}%></p>
 		<%}%>
 	<%} else { %>
-		<p>From <%=bonus.start%> to <%=bonus.end%></p>
+		<%if (bonus.start) {%>
+			<p>From <%=bonus.start%> <%if (bonus.end) {%>to <%=bonus.end%><%}%></p>
+		<%}%>
 	
 		<p>For <%=bonus.name%></p>
 		
