--- a/views/app/index.html
+++ b/views/app/index.html
@@ -8,6 +8,10 @@
 		<h1>Welcome to Charity Campaign</h1>
 	</div>
 
+	<%if (!luser) {%>
+		<p><a href="/users/validate" class="btn primary">Login to View Campaigns</a></p>
+	<%}%>
+
 	<p>Click here to <a href="/campaigns">View All Campaigns</a></p>
 
 	<p>This application was developed using <a href="http://nodejs.org/">node.js</a> and <a href="http://www.mongodb.org/">MongoDB</a>.</p>
