--- a/views/layout.html
+++ b/views/layout.html
@@ -64,6 +64,7 @@
 				<li><a href="/bonuses/filter/<%=campaignId%>">Bonuses</a></li>
 				<li><a href="/offices/filter/<%=campaignId%>">Offices</a></li>
 			<%} else {%>
+				<%if (luser) {%><li><a href="/campaigns/mine">My Campaign</a><li><%}%>
 				<li><a href="/">Home</a></li>
 				<li><a href="/about">About</a></li>
 				<li><a href="/admin">Admin</a></li>
