added item type list to various places to make navigations easier

--- a/views/itemtype/edit.html
+++ b/views/itemtype/edit.html
@@ -4,6 +4,7 @@
 <div class="span4 columns">
 	<h3>Quick Links</h3>
 	<ul class="unstyled">
+		<li><a href="/itemtypes/filter/<%= campaignId%>">List Item Types</a></li>
 		<li><a href="/campaigns/show/<%= campaignId%>">Back to Campaign</a></li>
 	</ul>
 
