--- a/views/layout.html
+++ b/views/layout.html
@@ -63,6 +63,7 @@
 				<li><a href="/users/filter/<%=campaignId%>">Users</a></li>
 				<li><a href="/bonuses/filter/<%=campaignId%>">Bonuses</a></li>
 				<li><a href="/offices/filter/<%=campaignId%>">Offices</a></li>
+				<li><a href="/itemtypes/filter/<%= campaignId%>">Item Types</a></li>
 			<%} else {%>
 				<%if (luser) {%><li><a href="/campaigns/mine">My Campaign</a><li><%}%>
 				<li><a href="/">Home</a></li>
