added recent item section to dashboard

--- a/views/layout.html
+++ b/views/layout.html
@@ -67,6 +67,7 @@
 			<%} else {%>
 				<%if (luser) {%><li><a href="/campaigns/mine">My Campaign</a><li><%}%>
 				<li><a href="/">Home</a></li>
+				<li><a href="/users">Users</a></li>
 				<li><a href="/about">About</a></li>
 				<li><a href="/admin">Admin</a></li>
 			<%}%>
