--- a/views/campaign/dashboard.html
+++ b/views/campaign/dashboard.html
@@ -51,6 +51,7 @@
 <!-- display tabs -->
 <ul id="dashtabs" class="tabs">
     <li class="active"><a href="#standings">Current Standings</a></li>
+    <li><a href="#recentitem">Recent Items</a></li>
     <li><a href="#myitems">My Items</a></li>
     
     <% for(var i=0; i < teams.length; i++) {%>
@@ -80,6 +81,36 @@
 		<% } %>
 		</tbody>
 	</table>
+</div>
+
+<!-- build recent items tab -->
+<div id="recentitem" class="tabview" style="display:none;">
+		<table class="common-table zebra-striped sortable">
+		<thead>
+			<tr><th>Created</th>
+			<th>Item</th>
+			<th>Total Points</th>
+			<th>Bonus Points</th>
+			<th>By</th>
+			<th>Team</th></tr>
+		</thead>
+		<tbody>
+		<% for(var i=0; i < recentItems.length; i++) {%>
+			<tr>
+				<td><%=recentItems[i].created_at_format%></td>
+				<td><a href="/items/show/<%= recentItems[i].id%>/<%= recentItems[i].slug%>"><%=recentItems[i].quantity%> <%= recentItems[i].name %></a></td>
+				<td><%=(items[i].points + items[i].bonus) * items[i].quantity %></td>
+				<td><%=items[i].bonus * items[i].quantity %></td>
+				<td><a href="/users/name/<%=recentItems[i].created_by_login%>"><%=recentItems[i].created_by_login%></a></td>
+				<td>
+				<%if (recentItems[i].team) {%>
+					<a href="/teams/show/<%=recentItems[i].teamId%>"><%=recentItems[i].team.name%></a>
+				<%}%>
+				</td>
+			</tr>
+		<%}%>
+		</tbody>
+		</table>
 </div>
 
 <!-- build my items tab -->
