updated logging and db logins. good to go for heroku deploy

--- a/views/app/install.html
+++ b/views/app/install.html
@@ -23,7 +23,7 @@
 		<h2>Installation</h2>
 	</div>
 
-	<p>See below for install messages.</p>
+	<p>Installation completed! See below for install messages.</p>
 	
 	<%- partial('../messages') %>
 	
