added item level listing

--- a/views/layout.html
+++ b/views/layout.html
@@ -59,6 +59,7 @@
     		<%if (campaignId) {%>
     			<li><a href="/campaigns/dashboard/<%=campaignId%>">Dashboard</a></li>
 				<li><a href="/campaigns/show/<%=campaignId%>">Campaign</a></li>
+				<li><a href="/items/all/<%=campaignId%>/10/0">Items</a></li>
 				<li><a href="/teams/filter/<%=campaignId%>">Teams</a></li>
 				<li><a href="/users/filter/<%=campaignId%>">Users</a></li>
 				<li><a href="/bonuses/filter/<%=campaignId%>">Bonuses</a></li>
